todas las img en local, dejo de usar lorem picsum

--- a/carrito.html
+++ b/carrito.html
@@ -71,7 +71,7 @@
                 <button class="vaciar">Vaciar Carrito</button>
 
                 <div class="prodCarrito">
-                    <img src="https://picsum.photos/400/280?random=1" alt="">
+                    <img src="images/productos/Arandanos.jpg" alt="">
                     <div class="detalle">
                         <button><i class="fa-solid fa-trash-can"></i></button>
                         <p>Producto 1</p>
@@ -83,7 +83,7 @@
                             </form>
                             <div>
                                 <p class="subtotal">total</p>
-                                <p class="precio">$3500</p>
+                                <p class="precio">$1500</p>
                             </div>
                         </div>
 
@@ -91,7 +91,7 @@
                 </div>
 
                 <div class="prodCarrito">
-                    <img src="https://picsum.photos/400/280?random=2" alt="">
+                    <img src="images/productos/cerezas.jpg" alt="">
                     <div class="detalle">
                         <button><i class="fa-solid fa-trash-can"></i></button>
                         <p>Producto 2</p>
@@ -111,7 +111,7 @@
 
                 <div class="total">
                     <p>TOTAL</p>
-                    <p class="precio">$5950</p>
+                    <p class="precio">$5000</p>
                 </div>
 
                 <button class="comprar">Comprar Ahora</button>
