--- a/favoritos.html
+++ b/favoritos.html
@@ -70,7 +70,7 @@
 
                 <div class="card">
                     <div class="top">
-                        <img src="https://picsum.photos/400/280?random=2" alt="">
+                        <img src="images/productos/cerezas.jpg" alt="">
                         <p class="titProd">PRODUCTO 2</p>
                         <p class="descrpcion">Lorem ipsum dolor sit amet consecte. </p>
                         <a href="opiniones.html" class="resenias">ver reseñas</a>
@@ -90,7 +90,7 @@
                 
                 <div class="card">
                     <div class="top">
-                        <img src="https://picsum.photos/400/280?random=4" alt="">
+                        <img src="images/productos/frutillas.jpg" alt="">
                         <p class="titProd">PRODUCTO 4</p>
                         <p class="descrpcion">Lorem ipsum dolor sit amet consecte. </p>
                         <a href="opiniones.html" class="resenias">ver reseñas</a>
