--- a/opiniones.html
+++ b/opiniones.html
@@ -71,7 +71,7 @@
                 <div class="card">
                     <div class="detalles">
                         <div class="top">
-                            <img src="https://picsum.photos/400/280?random=1" alt="">
+                            <img src="images/productos/Arandanos.jpg" alt="">
                             <p class="titProd">NOMBRE DEL PRODUCTO</p>
                             <p class="descrpcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, placeat
                                 pariatur repellendus, quam ipsa laudantium ab esse tenetur saepe ea molestias qui
