--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <p class="texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum autem ut ex aspernatur modi
             explicabo, eligendi, reprehenderit deserunt voluptas a culpa veniam quo, assumenda consequatur perferendis
             sapiente ducimus voluptatum architecto.</p>
-        <img src="https://picsum.photos/800/500?random=3" alt="" class="inicial">
+        <img src="images/fruteria.jpg" alt="" class="inicial">
         <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores libero labore nam? Optio distinctio voluptatibus, rerum nihil sequi omnis eum qui, nemo minima rem consectetur totam, a tenetur quaerat tempore!</p>
         <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores libero labore nam? Optio distinctio voluptatibus, rerum nihil sequi omnis eum qui, nemo minima rem consectetur totam, a tenetur quaerat tempore!</p>
     </main>
