--- a/tienda.html
+++ b/tienda.html
@@ -70,7 +70,7 @@
 
                 <div class="card">
                     <div class="top">
-                        <img src="https://picsum.photos/400/280?random=1" alt="">
+                        <img src="images/productos/Arandanos.jpg" alt="">
                         <p class="titProd">PRODUCTO 1</p>
                         <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus natus </p>
                         <a href="opiniones.html" class="resenias">ver reseñas</a>
@@ -90,7 +90,7 @@
 
                 <div class="card">
                     <div class="top">
-                        <img src="https://picsum.photos/400/280?random=2" alt="">
+                        <img src="images/productos/cerezas.jpg" alt="">
                         <p class="titProd">PRODUCTO 2</p>
                         <p class="descrpcion">Lorem ipsum dolor sit amet consecte. </p>
                         <a href="opiniones.html" class="resenias">ver reseñas</a>
@@ -108,10 +108,9 @@
                     </div>
                 </div>
 
-
                 <div class="card">
                     <div class="top">
-                        <img src="https://picsum.photos/400/280?random=3" alt="">
+                        <img src="images/productos/manzanas.jpg" alt="">
                         <p class="titProd">PRODUCTO 3</p>
                         <p class="descrpcion">Lorem ipsum dolor sit amet consecte. </p>
                         <a href="opiniones.html" class="resenias">ver reseñas</a>
@@ -131,7 +130,7 @@
 
                 <div class="card">
                     <div class="top">
-                        <img src="https://picsum.photos/400/280?random=4" alt="">
+                        <img src="images/productos/frutillas.jpg" alt="">
                         <p class="titProd">PRODUCTO 4</p>
                         <p class="descrpcion">Lorem ipsum dolor sit amet consecte. </p>
                         <a href="opiniones.html" class="resenias">ver reseñas</a>
@@ -151,7 +150,7 @@
 
                 <div class="card">
                     <div class="top">
-                        <img src="https://picsum.photos/400/280?random=5" alt="">
+                        <img src="images/productos/kiwis.jpg" alt="">
                         <p class="titProd">PRODUCTO 5</p>
                         <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                         <a href="opiniones.html" class="resenias">ver reseñas</a>
@@ -171,7 +170,7 @@
 
                 <div class="card">
                     <div class="top">
-                        <img src="https://picsum.photos/400/280?random=6" alt="">
+                        <img src="images/productos/uvas.jpg" alt="">
                         <p class="titProd">PRODUCTO 6</p>
                         <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus natus</p>
                         <a href="opiniones.html" class="resenias">ver reseñas</a>
