--- a/index.html
+++ b/index.html
@@ -16,74 +16,34 @@
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/footer.css">
     <!-- <link rel="stylesheet" href="css/slide.css"> -->
+
+
     <title>LaTienda</title>
 </head>
 
 <body>
     <div class="contenedor">
-    <header>
-        <div class="logo">
-            <img src="images/tienda.png" alt="">
-            <p class="marca">LaTienda</p>
-        </div>
+        <header></header>
+        <nav></nav>
 
-        <div class="formBuscar">
-            <form action="">
-                <input type="search" name="" id="buscar">
-                <i class="fa-solid fa-magnifying-glass"></i>
-            </form>
-        </div>
+        <main>
+            <h1 class="titulo">Bienvenidos</h1>
+            <p class="texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum autem ut ex aspernatur modi
+                explicabo, eligendi, reprehenderit deserunt voluptas a culpa veniam quo, assumenda consequatur
+                perferendis
+                sapiente ducimus voluptatum architecto.</p>
+            <img src="images/fruteria.jpg" alt="" class="inicial">
+            <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores libero labore nam? Optio
+                distinctio voluptatibus, rerum nihil sequi omnis eum qui, nemo minima rem consectetur totam, a tenetur
+                quaerat tempore!</p>
+            <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores libero labore nam? Optio
+                distinctio voluptatibus, rerum nihil sequi omnis eum qui, nemo minima rem consectetur totam, a tenetur
+                quaerat tempore!</p>
+        </main>
 
-        <div class="usuario">
-            <a href="favoritos.html"><i class="fa-solid fa-heart"></i></a>
-            <a href="carrito.html"><i class="fa-solid fa-cart-shopping"></i></a>
-            <a href="login.html"><i class="fa-solid fa-user"></i></a>
-            <a href="salir.html" style="display: none;"><i class="fa-solid fa-right-from-bracket"
-                    id="btn-salir"></i></a>
-        </div>
-    </header>
-    <nav>
-        <input type="checkbox" id="open-menu">
-        <label for="open-menu">
-            <i class="fa-solid fa-bars btn"></i>
-            <div class="formBuscar">
-                <form action="">
-                    <input type="search" name="" id="buscar">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                </form>
-            </div>
-        </label>
-
-        <div class="link">
-            <a href="index.html"><i class="fa-solid fa-house"></i>Bienvenidos</a>
-            <a href="tienda.html"><i class="fa-solid fa-store"></i>Tienda</a>
-            <a href="contactenos.html"><i class="fa-solid fa-envelope"></i>Contáctenos</a>
-            <a href="administracion.html"><i class="fa-solid fa-toolbox"></i>Administración</a>
-        </div>
-    </nav>
-
-    <main>
-        <h1 class="titulo">Bienvenidos</h1>
-        <p class="texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum autem ut ex aspernatur modi
-            explicabo, eligendi, reprehenderit deserunt voluptas a culpa veniam quo, assumenda consequatur perferendis
-            sapiente ducimus voluptatum architecto.</p>
-        <img src="images/fruteria.jpg" alt="" class="inicial">
-        <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores libero labore nam? Optio distinctio voluptatibus, rerum nihil sequi omnis eum qui, nemo minima rem consectetur totam, a tenetur quaerat tempore!</p>
-        <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores libero labore nam? Optio distinctio voluptatibus, rerum nihil sequi omnis eum qui, nemo minima rem consectetur totam, a tenetur quaerat tempore!</p>
-    </main>
-    <footer>
-        <div class="img">
-            <img src="images/Logos_BA_Agencia_grande.jpg" alt="">
-        </div>
-        <div class="curso">
-            <p>FRONT END JS - Comisión: 24225</p>
-            <p>Año: 2024</P>
-        </div>
-        <div class="integrantes">
-            <p> María de los Ángeles López</p>
-        </div>
-    </footer>
-    <div>
+        <footer></footer>
+        <div>
+            <script src="./src/index.js" type="module"></script>
 </body>
 
 </html>
