--- a/administracion.html
+++ b/administracion.html
@@ -11,7 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 
     <link rel="stylesheet" href="css/estilos-gral.css">
     <link rel="stylesheet" href="css/menu.css">
@@ -25,66 +26,30 @@
 
 <body>
     <div class="contenedor">
-        <header>
-            <div class="logo">
-                <img src="images/tienda.png" alt="">
-                <p class="marca">LaTienda</p>
-            </div>
-
-            <div class="formBuscar">
-                <form action="">
-                    <input type="search" name="" id="buscar">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                </form>
-            </div>
-
-            <div class="usuario">
-                <a href="favoritos.html"><i class="fa-solid fa-heart"></i></a>
-                <a href="carrito.html"><i class="fa-solid fa-cart-shopping"></i></a>
-                <a href="login.html"><i class="fa-solid fa-user"></i></a>
-                <a href="salir.html" style="display: none;"><i class="fa-solid fa-right-from-bracket"
-                        id="btn-salir"></i></a>
-            </div>
-        </header>
-        <nav>
-            <input type="checkbox" id="open-menu">
-            <label for="open-menu">
-                <i class="fa-solid fa-bars btn"></i>
-                <div class="formBuscar">
-                    <form action="">
-                        <input type="search" name="" id="buscar">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                    </form>
-                </div>
-            </label>
-
-            <div class="link">
-                <a href="index.html"><i class="fa-solid fa-house"></i>Bienvenidos</a>
-                <a href="tienda.html"><i class="fa-solid fa-store"></i>Tienda</a>
-                <a href="contactenos.html"><i class="fa-solid fa-envelope"></i>Contáctenos</a>            
-                <a href="administracion.html"><i class="fa-solid fa-toolbox"></i>Administración</a>
-            </div>
-        </nav>
+        <header></header>
+        <nav></nav>
 
         <main>
             <h1 class="titulo">Administración de Productos</h1>
 
             <div class="agregar">
-                <button>Agregar Nuevo Producto</button>
+                <button class="addcarrito">Agregar Nuevo Producto</button>
             </div>
 
-       <div id="formAdmin">
+            <div id="formAdmin">
                 <section id="AgregarProd">
                     <form action="" class="formularios">
                         <h2>Nuevo Producto</h2>
                         <label for="imagen" class="">Imagen</label>
                         <input type="file" name="imagen" id="imagen" class="">
                         <label for="descrpcion" class="">Descrpción</label>
-                        <textarea name="descrpcion" id="descrpcion" rows="8" placeholder="Escriba la descripción del producto aqui.."></textarea>
+                        <textarea name="descrpcion" id="descrpcion" rows="8"
+                            placeholder="Escriba la descripción del producto aqui.."></textarea>
                         <label for="precio" class="">Precio</label>
                         <input type="number" name="precio" id="precio" class="" placeholder="Ingrese el precio">
                         <label for="stock" class="">Stock</label>
-                        <input type="number" name="stock" id="stock" class="" placeholder="Ingrese la cantidad disponible">
+                        <input type="number" name="stock" id="stock" class=""
+                            placeholder="Ingrese la cantidad disponible">
 
                         <input type="submit" value="Agregar Producto" class="">
                     </form>
@@ -97,7 +62,7 @@
                         <label for="imagen" class="">Imagen</label>
                         <input type="file" name="imagen" id="imagen" class="">
                         <label for="descrpcion" class="">Descripción</label>
-                        <textarea name="descrpcion" id="descrpcion" rows="8" ></textarea>
+                        <textarea name="descrpcion" id="descrpcion" rows="8"></textarea>
                         <label for="precio" class="">Precio</label>
                         <input type="number" name="precio" id="precio" class="">
                         <label for="stock" class="">Stock</label>
@@ -124,8 +89,8 @@
                                 <!-- <span>Stock: </span> -->
                                 <span>{20}</span>
                             </form>
-                            <button><i class="fa-solid fa-pencil"></i></button>
-                            <button><i class="fa-solid fa-trash-can"></i></button>
+                            <button class="addcarrito"><i class="fa-solid fa-pencil"></i></button>
+                            <button class="addcarrito"><i class="fa-solid fa-trash-can"></i></button>
                         </div>
                     </div>
                 </div>
@@ -144,8 +109,8 @@
                                 <!-- <span>Stock: </span> -->
                                 <span>{30}</span>
                             </form>
-                            <button><i class="fa-solid fa-pencil"></i></button>
-                            <button><i class="fa-solid fa-trash-can"></i></button>
+                            <button class="addcarrito"><i class="fa-solid fa-pencil"></i></button>
+                            <button class="addcarrito"><i class="fa-solid fa-trash-can"></i></button>
                         </div>
                     </div>
                 </div>
@@ -164,8 +129,8 @@
                                 <!-- <span>Stock: </span> -->
                                 <span>{20}</span>
                             </form>
-                            <button><i class="fa-solid fa-pencil"></i></button>
-                            <button><i class="fa-solid fa-trash-can"></i></button>
+                            <button class="addcarrito"><i class="fa-solid fa-pencil"></i></button>
+                            <button class="addcarrito"><i class="fa-solid fa-trash-can"></i></button>
                         </div>
                     </div>
                 </div>
@@ -184,28 +149,20 @@
                                 <!-- <span>Stock: </span> -->
                                 <span>{20}</span>
                             </form>
-                            <button><i class="fa-solid fa-pencil"></i></button>
-                            <button><i class="fa-solid fa-trash-can"></i></button>
+                            <button class="addcarrito"><i class="fa-solid fa-pencil"></i></button>
+                            <button class="addcarrito"><i class="fa-solid fa-trash-can"></i></button>
                         </div>
                     </div>
                 </div>
 
             </section>
         </main>
-        <footer>
-            <div class="img">
-                <img src="images/Logos_BA_Agencia_grande.jpg" alt="">
-            </div>
-            <div class="curso">
-                <p>FRONT END JS - Comisión: 24225</p>
-                <p>Año: 2024</P>
-            </div>
-            <div class="integrantes">
-                <p> María de los Ángeles López</p>
-            </div>
-        </footer>
+
+        <footer></footer>
 
     </div>
+
+    <script src="./src/index.js" type="module"></script>
 </body>
 
 </html>
