--- a/tienda.html
+++ b/tienda.html
@@ -11,7 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 
     <link rel="stylesheet" href="css/estilos-gral.css">
     <link rel="stylesheet" href="css/menu.css">
@@ -23,46 +24,8 @@
 
 <body>
     <div class="contenedor">
-        <header>
-            <div class="logo">
-                <img src="images/tienda.png" alt="">
-                <p class="marca">LaTienda</p>
-            </div>
-
-            <div class="formBuscar">
-                <form action="">
-                    <input type="search" name="" id="buscar">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                </form>
-            </div>
-
-            <div class="usuario">
-                <a href="favoritos.html"><i class="fa-solid fa-heart"></i></a>
-                <a href="carrito.html"><i class="fa-solid fa-cart-shopping"></i></a>
-                <a href="login.html"><i class="fa-solid fa-user"></i></a>
-                <a href="salir.html" style="display: none;"><i class="fa-solid fa-right-from-bracket"
-                        id="btn-salir"></i></a>
-            </div>
-        </header>
-        <nav>
-            <input type="checkbox" id="open-menu">
-            <label for="open-menu">
-                <i class="fa-solid fa-bars btn"></i>
-                <div class="formBuscar">
-                    <form action="">
-                        <input type="search" name="" id="buscar">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                    </form>
-                </div>
-            </label>
-
-            <div class="link">
-                <a href="index.html"><i class="fa-solid fa-house"></i>Bienvenidos</a>
-                <a href="tienda.html"><i class="fa-solid fa-store"></i>Tienda</a>
-                <a href="contactenos.html"><i class="fa-solid fa-envelope"></i>Contáctenos</a>         
-                <a href="administracion.html"><i class="fa-solid fa-toolbox"></i>Administración</a>
-            </div>
-        </nav>
+        <header> </header>
+        <nav></nav>
 
         <main>
             <h1 class="titulo">Nuestros Productos</h1>
@@ -96,7 +59,8 @@
                         <a href="opiniones.html" class="resenias">ver reseñas</a>
                     </div>
                     <div class="bottom">
-                        <p class="precio">$2450 <button class="favorito"><i class="fa-solid fa-heart-circle-check"></i></button></p>
+                        <p class="precio">$2450 <button class="favorito"><i
+                                    class="fa-solid fa-heart-circle-check"></i></button></p>
                         <div class="agregar">
                             <form action="">
                                 <button class="restar"><i class="fa-solid fa-square-minus"></i></button>
@@ -136,7 +100,8 @@
                         <a href="opiniones.html" class="resenias">ver reseñas</a>
                     </div>
                     <div class="bottom">
-                        <p class="precio">$5600 <button class="favorito"><i class="fa-solid fa-heart-circle-check"></i></button></p>
+                        <p class="precio">$5600 <button class="favorito"><i
+                                    class="fa-solid fa-heart-circle-check"></i></button></p>
                         <div class="agregar">
                             <form action="">
                                 <button class="restar"><i class="fa-solid fa-square-minus"></i></button>
@@ -166,7 +131,7 @@
                             <button class="addcarrito"><i class="fa-solid fa-cart-plus"></i></button>
                         </div>
                     </div>
-                </div> 
+                </div>
 
                 <div class="card">
                     <div class="top">
@@ -175,7 +140,7 @@
                         <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus natus</p>
                         <a href="opiniones.html" class="resenias">ver reseñas</a>
                     </div>
-                   <div class="bottom">
+                    <div class="bottom">
                         <p class="precio">$1560 <button class="favorito"><i class="fa-solid fa-heart"></i></button></p>
                         <div class="agregar">
                             <form action="">
@@ -186,24 +151,14 @@
                             <button class="addcarrito"><i class="fa-solid fa-cart-plus"></i></button>
                         </div>
                     </div>
-                </div> 
+                </div>
 
             </section>
         </main>
-        <footer>
-            <div class="img">
-                <img src="images/Logos_BA_Agencia_grande.jpg" alt="">
-            </div>
-            <div class="curso">
-                <p>FRONT END JS - Comisión: 24225</p>
-                <p>Año: 2024</P>
-            </div>
-            <div class="integrantes">
-                <p> María de los Ángeles López</p>
-            </div>
-        </footer>
+        <footer></footer>
 
     </div>
+    <script src="./src/index.js" type="module"></script>
 </body>
 
 </html>
