plantilla con modulos sin export, mas simple

--- a/administracion.html
+++ b/administracion.html
@@ -162,7 +162,7 @@
 
     </div>
 
-    <script src="./src/index.js" type="module"></script>
+    <script src="./src/modulos.js"></script>
 </body>
 
 </html>
