--- a/tienda.html
+++ b/tienda.html
@@ -158,7 +158,7 @@
         <footer></footer>
 
     </div>
-    <script src="./src/index.js" type="module"></script>
+    <script src="./src/modulos.js"></script>
 </body>
 
 </html>
