--- a/login.html
+++ b/login.html
@@ -45,7 +45,7 @@
     </main>
     <footer></footer>
     <div>
-    <script src="./src/index.js" type="module"></script>
+        <script src="./src/modulos.js"></script>
 </body>
 
 </html>
