--- a/registro.html
+++ b/registro.html
@@ -49,7 +49,7 @@
         </footer>
         <div>
 
-            <script src="./src/index.js" type="module"></script>
+            <script src="./src/modulos.js"></script>
 </body>
 
 </html>
