carrito funcionando con lo explicado en el curso

--- a/tienda.html
+++ b/tienda.html
@@ -29,129 +29,7 @@
 
         <main>
             <h1 class="titulo">Nuestros Productos</h1>
-            <section class="productos">
-
-                <div class="card">
-                    <div class="top">
-                        <img src="images/productos/Arandanos.jpg" alt="">
-                        <p class="titProd">PRODUCTO 1</p>
-                        <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus natus </p>
-                        <a href="opiniones.html" class="resenias">ver reseñas</a>
-                    </div>
-                    <div class="bottom">
-                        <p class="precio">$1560 <button class="favorito"><i class="fa-solid fa-heart"></i></button></p>
-                        <div class="agregar">
-                            <form action="">
-                                <button class="restar"><i class="fa-solid fa-square-minus"></i></button>
-                                <input type="number" name="cant" id="cant" min="0" value="1">
-                                <button class="sumar"><i class="fa-solid fa-square-plus"></i></button>
-                            </form>
-                            <button class="addcarrito"><i class="fa-solid fa-cart-plus"></i></button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="top">
-                        <img src="images/productos/cerezas.jpg" alt="">
-                        <p class="titProd">PRODUCTO 2</p>
-                        <p class="descrpcion">Lorem ipsum dolor sit amet consecte. </p>
-                        <a href="opiniones.html" class="resenias">ver reseñas</a>
-                    </div>
-                    <div class="bottom">
-                        <p class="precio">$2450 <button class="favorito"><i
-                                    class="fa-solid fa-heart-circle-check"></i></button></p>
-                        <div class="agregar">
-                            <form action="">
-                                <button class="restar"><i class="fa-solid fa-square-minus"></i></button>
-                                <input type="number" name="cant" id="cant" min="0" value="1">
-                                <button class="sumar"><i class="fa-solid fa-square-plus"></i></button>
-                            </form>
-                            <button class="addcarrito"><i class="fa-solid fa-cart-plus"></i></button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="top">
-                        <img src="images/productos/manzanas.jpg" alt="">
-                        <p class="titProd">PRODUCTO 3</p>
-                        <p class="descrpcion">Lorem ipsum dolor sit amet consecte. </p>
-                        <a href="opiniones.html" class="resenias">ver reseñas</a>
-                    </div>
-                    <div class="bottom">
-                        <p class="precio">$3500 <button class="favorito"><i class="fa-solid fa-heart"></i></button></p>
-                        <div class="agregar">
-                            <form action="">
-                                <button class="restar"><i class="fa-solid fa-square-minus"></i></button>
-                                <input type="number" name="cant" id="cant" min="0" value="1">
-                                <button class="sumar"><i class="fa-solid fa-square-plus"></i></button>
-                            </form>
-                            <button class="addcarrito"><i class="fa-solid fa-cart-plus"></i></button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="top">
-                        <img src="images/productos/frutillas.jpg" alt="">
-                        <p class="titProd">PRODUCTO 4</p>
-                        <p class="descrpcion">Lorem ipsum dolor sit amet consecte. </p>
-                        <a href="opiniones.html" class="resenias">ver reseñas</a>
-                    </div>
-                    <div class="bottom">
-                        <p class="precio">$5600 <button class="favorito"><i
-                                    class="fa-solid fa-heart-circle-check"></i></button></p>
-                        <div class="agregar">
-                            <form action="">
-                                <button class="restar"><i class="fa-solid fa-square-minus"></i></button>
-                                <input type="number" name="cant" id="cant" min="0" value="1">
-                                <button class="sumar"><i class="fa-solid fa-square-plus"></i></button>
-                            </form>
-                            <button class="addcarrito"><i class="fa-solid fa-cart-plus"></i></button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="top">
-                        <img src="images/productos/kiwis.jpg" alt="">
-                        <p class="titProd">PRODUCTO 5</p>
-                        <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-                        <a href="opiniones.html" class="resenias">ver reseñas</a>
-                    </div>
-                    <div class="bottom">
-                        <p class="precio">$4320 <button class="favorito"><i class="fa-solid fa-heart"></i></button></p>
-                        <div class="agregar">
-                            <form action="">
-                                <button class="restar"><i class="fa-solid fa-square-minus"></i></button>
-                                <input type="number" name="cant" id="cant" min="0" value="1">
-                                <button class="sumar"><i class="fa-solid fa-square-plus"></i></button>
-                            </form>
-                            <button class="addcarrito"><i class="fa-solid fa-cart-plus"></i></button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="top">
-                        <img src="images/productos/uvas.jpg" alt="">
-                        <p class="titProd">PRODUCTO 6</p>
-                        <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus natus</p>
-                        <a href="opiniones.html" class="resenias">ver reseñas</a>
-                    </div>
-                    <div class="bottom">
-                        <p class="precio">$1560 <button class="favorito"><i class="fa-solid fa-heart"></i></button></p>
-                        <div class="agregar">
-                            <form action="">
-                                <button class="restar"><i class="fa-solid fa-square-minus"></i></button>
-                                <input type="number" name="cant" id="cant" min="0" value="1">
-                                <button class="sumar"><i class="fa-solid fa-square-plus"></i></button>
-                            </form>
-                            <button class="addcarrito"><i class="fa-solid fa-cart-plus"></i></button>
-                        </div>
-                    </div>
-                </div>
+            <section class="productos" id="articulos">
 
             </section>
         </main>
@@ -159,6 +37,7 @@
 
     </div>
     <script src="./src/modulos.js"></script>
+    <script src="./js/obtenerArticulos.js"></script>
 </body>
 
 </html>
