--- a/carrito.html
+++ b/carrito.html
@@ -7,6 +7,8 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
+   
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
@@ -30,53 +32,22 @@
             <section id="carrito">
                 <h1 class="titulo">Mi Carrito</h1>
 
-                <button class="vaciar">Vaciar Carrito</button>
+                <button class="vaciar" id="vaciarCarrito">Vaciar Carrito</button>
 
-                <div class="prodCarrito">
-                    <img src="images/productos/Arandanos.jpg" alt="">
-                    <div class="detalle">
-                        <button><i class="fa-solid fa-trash-can"></i></button>
-                        <p>Producto 1</p>
-                        <div class="agregar">
-                            <form action="">
-                                <button class="restar"><i class="fa-solid fa-square-minus"></i></button>
-                                <input type="number" name="cant" id="cant" min="0" value="1">
-                                <button class="sumar"><i class="fa-solid fa-square-plus"></i></button>
-                            </form>
-                            <div>
-                                <p class="subtotal">total</p>
-                                <p class="precio">$1500</p>
-                            </div>
-                        </div>
+                <div id="carrito-items">
 
+                 <!-- contenedor items carrito -->
+
+                </div>
+                
+                    <div class="total">
+                        <p>TOTAL</p>
+                        <p class="precio" id="total">
+                            <!-- aca va el total a pagar -->
+                        </p>
                     </div>
-                </div>
-
-                <div class="prodCarrito">
-                    <img src="images/productos/cerezas.jpg" alt="">
-                    <div class="detalle">
-                        <button><i class="fa-solid fa-trash-can"></i></button>
-                        <p>Producto 2</p>
-                        <div class="agregar">
-                            <form action="">
-                                <button class="restar"><i class="fa-solid fa-square-minus"></i></button>
-                                <input type="number" name="cant" id="cant" min="0" value="1">
-                                <button class="sumar"><i class="fa-solid fa-square-plus"></i></button>
-                            </form>
-                            <div>
-                                <p class="subtotal">total</p>
-                                <p class="precio">$3500</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="total">
-                    <p>TOTAL</p>
-                    <p class="precio">$5000</p>
-                </div>
-
-                <button class="comprar">Comprar Ahora</button>
+                
+                <button class="comprar" id="finalizarCompra">Finalizar Compra</button>
 
 
             </section>
@@ -85,6 +56,8 @@
         <div>
 
             <script src="./src/modulos.js"></script>
+            <script src="./js/carrito.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
